# Mobile-Robots-2026-2

./: .gitignore  README.md  Setup.sh
ros2_ws/: .gitignore
ros2_ws/src/hardware/car_simul/: package.xml  setup.cfg  setup.py
ros2_ws/src/hardware/house_simul/: CMakeLists.txt  package.xml
ros2_ws/src/hardware/house_simul/config/: gz_bridge.yaml
ros2_ws/src/hardware/house_simul/launch/: gz_ros_bridge.launch.py  house_simul.launch.py  test.launch.py
ros2_ws/src/hardware/house_simul/worlds/: house.world  simple_house.world
ros2_ws/src/hardware/humanoid_simul/: CMakeLists.txt  package.xml
ros2_ws/src/hardware/humanoid_simul/src/: basic_mujoco.cpp  humanoid_simul.cpp
ros2_ws/src/hardware/justina_description/: CMakeLists.txt
ros2_ws/src/hardware/justina_description/config/: diff_drive_controller.yaml  ros2control.yaml  ros2control_old.yaml
ros2_ws/src/hardware/justina_description/urdf/: justina.xacro  justina_base.xacro  justina_upper.xacro
ros2_ws/src/hri/lira_gui/: CMakeLists.txt  package.xml
ros2_ws/src/hri/lira_gui/include/: mainwindow.h  rclcomm.h
ros2_ws/src/hri/lira_gui/src/: lira_gui_node.cpp  mainwindow.cpp  rclcomm.cpp
ros2_ws/src/hri/lira_gui/ui/: mainwindow.ui
ros2_ws/src/navigation/motion_planning/: package.xml  setup.py
ros2_ws/src/navigation/motion_planning/config/: mapper_params_online_async.yaml
ros2_ws/src/navigation/motion_planning/launch/: mapping.launch.py  motion_planning.launch.py
ros2_ws/src/navigation/motion_planning/maps/: appartment.pgm  appartment.yaml
ros2_ws/src/navigation/path_follower/: setup.py
(+19 files in other folders)
